# eval-driven-summarizer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: eval.yml
agent/: crawler.py  critic.py  debate.py  explainer.py  llm.py  prompts.py  summarizer.py
app/: database.py  main.py
app/static/: index.html
app/static/assets/: index-1DwqpGw4.css  index-5uIR6CYc.css  index-BH_6ezpS.js  index-BPOELQsH.css  index-BVWXLne4.js  index-BylXP4FY.js  index-BzfBXfCy.js  index-CClJp1_w.css  index-CQ8XnjIL.css  index-CX5YFZv9.js  index-CytN4oAG.css  index-D6O6LbIX.css  index-DF-isIl2.js  index-D_D7Gv8K.js  index-Djt4f1kx.js  index-DoDO8I0G.js  index-DtB_CPtM.js  index-DxcOmXhW.js  index-UhRUxKy6.js  index-hxCxd52p.js
dashboard/: app.py
data/: loader.py
data/documents/: en_news_001.txt  en_news_002.txt  en_news_003.txt  en_news_004.txt  en_news_005.txt  en_news_006.txt  meeting_001.txt  meeting_002.txt  news_001.txt  news_002.txt  paper_001.txt  paper_002.txt
data/ground_truth/: en_news_001.json  en_news_002.json  en_news_003.json  en_news_004.json  en_news_005.json  en_news_006.json  meeting_001.json  meeting_002.json  news_001.json  news_002.json  paper_001.json  paper_002.json
eval/: analyzer.py  judge.py  metrics.py
pipeline/: ci_check.py  improver.py  loop.py  regression.py  run.py  runner.py  trace_viewer.py  tracer.py
ui/: package-lock.json  vite.config.ts
ui/src/: App.tsx  index.css
(+18 files in other folders)
