[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "eval*", "pipeline*", "app*", "data*"]

[project]
name = "eval-driven-summarizer"
version = "0.1.0"
description = "Eval-driven document summarization agent: summarize → evaluate → improve loop"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "rich>=13.9.0",
    "json-repair>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
